Completed html and css for the rock papaer scisssors game. Still need to fix overlapping circles error on the icons.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,3 +64,49 @@
     font-family: asap, sans-serif;
     font-weight: bold;
 }
+
+.choices {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.choice1 {
+    border: 4px solid white;
+    display: inline-block;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 0 15px;
+    transition: all 0.3s ease;
+}
+
+.choice2 {
+    border: 4px solid white;
+    display: inline-block;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 0 15px;
+}
+
+.choice3 {
+    border: 4px solid white;
+    display: inline-block;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 0 15px;
+}
+
+.choice1:hover {
+    background: #1753dd;
+    cursor: pointer;
+}
+
+#action-message {
+    text-align: center;
+    color: white;
+    font-family: asap, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+
